--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Info
         run: |
-          docker-compose --version
+          docker compose --version
           docker version
           npm --version
 
