--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,12 +18,13 @@ server {
         try_files $uri $uri/index.html $uri/index.xml $uri/index.js 404;
         rewrite ^/favicon.ico$ /assets/images/favicon.png permanent;
         rewrite ^/about.html$ /about/ permanent;
-        rewrite ^/projects.html$ /projects/ permanent;
+        rewrite ^/projects.html$ /our-work/ permanent;
+        rewrite ^/projects(.*)$ /our-work$1 permanent;
         rewrite ^/fellows-application-2018/?$ /jobs/2018/summer/fellows/apply/ permanent;
         rewrite ^/fellows-application-2017/?$ /jobs/2017/summer/fellows/apply/ permanent;
         rewrite ^/fellows-application-2016/?$ /jobs/2016/summer/fellows/apply/ permanent;
         rewrite ^/fellows/?$ /collaborate/2018/summer/fellows/apply/ redirect;
-        rewrite ^/projects/free-the-law/?$ /projects/caselaw-access-project/ permanent;
+        rewrite ^/projects/free-the-law/?$ /our-work/caselaw-access-project/ permanent;
         rewrite ^/collaborate(.*)$ /jobs$1 permanent;
     }
 
