Convert the 2016 fellows page into a generic work page.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,6 +22,7 @@ server {
         rewrite ^/projects(.*)$ /our-work$1 permanent;
         rewrite ^/projects/free-the-law/?$ /our-work/caselaw-access-project/ permanent;
         rewrite ^/collaborate(.*)$ /jobs$1 permanent;
+        rewrite ^/jobs/2016/summer/fellows/?$ /our-work/fellows-2016/ permanent;
     }
 
     # deny access to .htaccess files, if Apache's document root
