Delete and redirect "about" subpages to new locations.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,6 +23,9 @@ server {
         rewrite ^/projects/free-the-law/?$ /our-work/caselaw-access-project/ permanent;
         rewrite ^/collaborate(.*)$ /jobs$1 permanent;
         rewrite ^/jobs/2016/summer/fellows/?$ /our-work/fellows-2016/ permanent;
+        rewrite ^/about/cap-celebration/ /events/transform-justice/ permanent;
+        rewrite ^/about/cap-celebration/stream/ /events/transform-justice/ permanent;
+        rewrite ^/about/democratizing-open-knowledge /our-work/democratizing-open-knowledge/ permanent;
     }
 
     # deny access to .htaccess files, if Apache's document root
