--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -171,7 +171,7 @@ christopher-setzer:
 clare-stanton:
   name: Clare Stanton
   sort_name: Stanton
-  role: Product and Research Manager
+  role: Product and Research Director
   bio: >
     Clare's true occupation is as a milliner, creating multiple hats for herself everywhere she goes.
     She's worked in every department of a photography gallery, as the event coordinator/alumni liaison/substitute teacher
