--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/harvard-lil/website-static#readme",
   "dependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.45",
+    "postcss-cli": "^11.0.0",
     "postcss-import": "^16.1.0",
     "postcss-scss": "^4.0.9",
     "tailwindcss": "^3.4.3"
