Changes for Mastodon links

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -244,7 +244,7 @@ jim-cowie:
   image: jim-cowie.jpg
   affiliated: true
   current: true
-  section: Affiliates
+  section: Fellows
 
 katy-ilonka-gero:
   name: Katy Ilonka Gero
